--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <div class="copyright">
-                    <!-- © 2017, {{ site.data.global.title }}, All rights reserved -->
+             <!--    <div class="copyright">
+                    © 2017, {{ site.data.global.title }}, All rights reserved 
                     Welcome!!
-                </div>
+                </div> -->
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                 <div class="design">
