--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -6,8 +6,8 @@
             <div class="col-lg-7 col-lg-offset-1">
 
               <p id="error" class="primary-color text-center">404</p>
-              <h1 class="text-center">We are sorry</h1>
-              <h4 class="text-center">The page you are looking or does not exists :(</h4>
+              <h1 class="text-center">挖哩~</h1>
+              <h4 class="text-center">網頁消失了!!(</h4>
 
             </div>
             <div class="col-lg-4">
