--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -53,7 +53,7 @@
 
 
 <!-- Subscription -->
-<div class="col-lg-12">
+<!-- <div class="col-lg-12">
     <h4 class="recent-title">Never miss a post !</h4>
     <div id="mc_embed_signup">
         <form action="//github.us15.list-manage.com/subscribe/post?u=1bbd7132801a87ab5a48e2193&amp;id=d329b82930" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -64,4 +64,4 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
