--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -33,7 +33,7 @@
 
 
 <!-- sharing options -->
-<section>
+<!-- <section>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <hr>
 
 
