--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,7 +11,7 @@
 
                     {% if page.image %}
 <!--                     <img class="img-main" src="{{ page.image | prepend: site.url }}" height="400"> -->
-                        <img class="img-main" src="{{ prepend: site.url }}" height="400">
+                        <img class="img-main" src="{{ site.url }}" height="400">
                     {% endif %}
 
                     {% if page.video %}
