--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,8 +10,7 @@
                     <a href="#" class="image-anchor">
 
                     {% if page.image %}
-<!--                     <img class="img-main" src="{{ page.image | prepend: site.url }}" height="400"> -->
-                        <img class="img-main" src="{{ page.image | absolute_url }}" height="400">
+                    <img class="img-main" src="{{ page.image | slice: -26, }}" height="400">
                     {% endif %}
 
                     {% if page.video %}
