--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,7 +10,7 @@
                     <a href="#" class="image-anchor">
 
                     {% if page.image %}
-                    <img class="img-main" src="{{ page.image | slice: -26, 10 }}" height="400">
+                    <img class="img-main" src="{{ image }}" height="400">
                     {% endif %}
 
                     {% if page.video %}
