--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
                           <a href="{{ post.url | prepend: site.url }}" class="image-anchor">
 
                           {% if post.image %}
-                          <img class="img-main" src="{{ post.image | prepend: site.url }}" height="400">
+<!--                           <img class="img-main" src="{{ post.image | prepend: site.url }}" height="400"> -->
+                              <img class="img-main" src="{{ prepend: image.url }}" height="400">
                           {% endif %}
 
                           {% if post.video %}
