--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -77,7 +77,7 @@
                       (function() {
                           var d = document,
                               s = d.createElement('script');
-                          s.src = '//lavkumarv-github-io.disqus.com/embed.js';
+                          s.src = '//kaia-HSU-github-io.disqus.com/embed.js';
                           s.setAttribute('data-timestamp', +new Date());
                           (d.head || d.body).appendChild(s);
                       })();
