--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -66,7 +66,7 @@
 <hr>
 
 <!-- Sharing buttons -->
-<section>
+<!-- <section>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-7 col-lg-offset-1">
@@ -87,7 +87,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <hr>
 
