--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
                           {% if post.image %}
 <!--                           <img class="img-main" src="{{ post.image | prepend: site.url }}" height="400">  error --> 
-<!--                           <img class="img-main" src="{{ post.image | remove:'https://kaia-HSU.github.io' }}" height="400"> -->
+<!--                           <img class="img-main" src="{{ post.image | remove:'https://kaiachun.github.io' }}" height="400"> -->
                                <img class="img-main" src="{{ post.image }}" height="400">
                           {% endif %}
 
