--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,8 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                 <div class="design">
-                    <a href="#"> {{ site.admin_name }} </a>  <a target="_blank" href="https://github.com/kaiachun">My Github</a>
+                    <a href="#"> {{ site.admin_name }} </a>  
+                    <a target="_blank" href="https://github.com/kaiachun">My Github</a>
                 </div>
             </div>
         </div>
