--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,8 @@
         <div class="row">
             <div class="col-lg-4 col-lg-offset-1">
                 <div class="person">
-                    <img src="{{ site.data.global.author_image | prepend: site.url }}" class="pull-center round-img img-responsive">
+                    <img src="{{ site.data.global.author_image | prepend: site.url }}" class="border-radius: 50%;">
+                    <!-- class="pull-center round-img img-responsive" -->
                     <h1 class="name text-center"> {{ site.data.global.author_name }} </h1>
                     <h2 class="profession text-center"> {{ site.data.global.author_profession }} </h2>
                 </div>
