--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -12,7 +12,7 @@
                     {% if page.image %}
 <!--                     <img class="img-main" src="{{ page.image | prepend: site.url }}" height="400"> -->
 <!--                         <img class="img-main" src="{{ prepend: image.url }}" height="400"> -->
-                        <img class="img-main" src="{{ page.image }}" height="300">
+                        <img class="img-main" src="{{ page.image }}" height="80%">
 
                     {% endif %}
 
